[workspace]
members = [
    "arma/server/extension",
    "bin/icom",
    "lib/models",
    "lib/repositories",
    "lib/services",
    "lib/shared",
]
resolver = "3"

[workspace.dependencies]
arma-rs = { version = "1.11.15", features = ["chrono", "serde_json", "uuid"] }
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
